--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <link rel="stylesheet" href="./packages/css/styles.css">
 
     <title>Neeraj Jain</title>
-    <link rel="icon" href="" type="image/x-icon" class="uil-andoid-alt">
+    <link rel="shortcut icon" type="image/jpg" href="./packages/images/logo.png"/>
 </head>
 
 <body>
@@ -160,7 +160,7 @@
                     </div>
 
                     <div class="about__buttons">
-                        <a download="" href="packages/pdf/" class="button button--flex">
+                        <a download="" href="./packages/pdf/Neeraj Jain_Resume.pdf" class="button button--flex">
                             Download Resume<i class="uil uil-download-alt button__icon"></i>
                         </a>
                     </div>
