--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
                     <div class="home__social">
                         <a href="https://www.linkedin.com/in/neeraj-jain-83b005159/" target="_blank"
                             class="home__social-icon">
-                            <i class="uil uil-linkedin-alt"></i>
+                            <i class="uil uil-linkedin"></i>
                         </a>
                         <a href="https://github.com/Neerajjain311" target="_blank" class="home__social-icon">
                             <i class="uil uil-github-alt"></i>
@@ -793,7 +793,7 @@
             <div class="contact__container container grid">
                 <div>
                     <div class="contact__information">
-                        <i class="uil uil-linkedin-alt home__social-icon"></i>
+                        <i class="uil uil-linkedin home__social-icon"></i>
 
                         <div>
                             <h3 class="contact__title">Let's Connect !</h3>
