Updated Qualification Section

--- a/index.html
+++ b/index.html
@@ -366,8 +366,8 @@
                         <div class="qualification__data">
                             <div>
                                 <h3 class="qualification__title">BTech </h3>
-                                <span class="qualification__subtitle1">( Computer Science And Engineering )</span>
                                 <span class="qualification__subtitle3">NIT Raipur</span><br>
+                                <span class="qualification__subtitle1">( Computer Science And Engineering )</span>
                                 <span class="qualification__subtitle2">Rank - 2/94, 3/934</span>
                                 <div class="qualification__calendar">
                                     <i class="uil uil-calendar-alt"></i>
@@ -391,8 +391,8 @@
 
                             <div>
                                 <h3 class="qualification__title">High School</h3>
-                                <span class="qualification__subtitle1">( PCM + Computer Science )</span>
                                 <span class="qualification__subtitle3">Holy Hearts Educational Academy</span>
+                                <span class="qualification__subtitle1">( PCM + Computer Science )</span>
                                 <span class="qualification__subtitle2">Rank - 2/212</span>
                                 <div class="qualification__calendar">
                                     <i class="uil uil-calendar-alt"></i>
@@ -406,6 +406,8 @@
                             <div>
                                 <h3 class="qualification__title">Primary School</h3>
                                 <span class="qualification__subtitle3">Holy Hearts Educational Academy</span>
+                                <span class="qualification__subtitle2">Schooling | Quizzing | Chess 
+                                </span>
                                 <div class="qualification__calendar">
                                     <i class="uil uil-calendar-alt"></i>
                                     2000 - 2014
@@ -426,9 +428,9 @@
                         <div class="qualification__data">
                             <div>
                                 <h3 class="qualification__title">Software Engineer</h3>
+                                <span class="qualification__subtitle3">Optum - UHG</span><br>
                                 <span class="qualification__subtitle1">Core Data Platform</span><br>
                                 <span class="qualification__subtitle2">Airflow Migration</span><br>
-                                <span class="qualification__subtitle3">Optum - UHG</span>
                                 <div class="qualification__calendar">
                                     <i class="uil uil-calendar-alt"></i>
                                     2020 - Present
@@ -451,9 +453,9 @@
 
                             <div>
                                 <h3 class="qualification__title">Research Intern</h3>
+                                <span class="qualification__subtitle3">Bhabha Atomic Research Centre</span>
                                 <span class="qualification__subtitle1">Deep Learning Team</span>
                                 <span class="qualification__subtitle2">Computer Division</span>
-                                <span class="qualification__subtitle3">Bhabha Atomic Research Centre</span>
                                 <div class="qualification__calendar">
                                     <i class="uil uil-calendar-alt"></i>
                                     2019 
@@ -465,9 +467,9 @@
                         <div class="qualification__data">
                             <div>
                                 <h3 class="qualification__title">Tech Trainer</h3>
+                                <span class="qualification__subtitle3">SmileBots</span><br>
                                 <span class="qualification__subtitle2">Program Mentoring</span><br>
                                 <span class="qualification__subtitle2">Tech Workshops</span><br>
-                                <span class="qualification__subtitle3">SmileBots</span>
                                 <div class="qualification__calendar">
                                     <i class="uil uil-calendar-alt"></i>
                                     2017 - 18
