--- a/index.html
+++ b/index.html
@@ -428,6 +428,25 @@
                         <div class="qualification__data">
                             <div>
                                 <h3 class="qualification__title">Software Engineer</h3>
+                                <span class="qualification__subtitle3">StreamSets Inc.</span><br>
+                                <span class="qualification__subtitle1">Data Collector Team</span><br>
+                                <span class="qualification__subtitle2">Core Product</span><br>
+                                <div class="qualification__calendar">
+                                    <i class="uil uil-calendar-alt"></i>
+                                    2020 - Present
+                                </div>
+                            </div>
+
+                            <div>
+                                <span class="qualification__rounder"></span>
+                                <span class="qualification__line"></span>
+                            </div>
+                        </div>
+
+                        <!--==================== QUALIFICATION 2 ====================-->
+                        <div class="qualification__data">
+                            <div>
+                                <h3 class="qualification__title">Software Engineer</h3>
                                 <span class="qualification__subtitle3">Optum - UHG</span><br>
                                 <span class="qualification__subtitle1">Core Data Platform</span><br>
                                 <span class="qualification__subtitle2">Airflow Migration</span><br>
@@ -443,7 +462,7 @@
                             </div>
                         </div>
 
-                        <!--==================== QUALIFICATION 2 ====================-->
+                        <!--==================== QUALIFICATION 3 ====================-->
                         <div class="qualification__data">
                             <div></div>
                             <div>
@@ -463,7 +482,7 @@
                             </div>
                         </div>
 
-                        <!--==================== QUALIFICATION 3 ====================-->
+                        <!--==================== QUALIFICATION 4 ====================-->
                         <div class="qualification__data">
                             <div>
                                 <h3 class="qualification__title">Tech Trainer</h3>
