--- a/index.html
+++ b/index.html
@@ -425,7 +425,7 @@
                     <!--==================== QUALIFICATION CONTENT 2 ====================-->
                     <div class="qualification__content" data-content id="work">
                         <!--==================== QUALIFICATION 1 ====================-->
-                        <div class="qualification__data">
+<!--                         <div class="qualification__data">
                             <div>
                                 <h3 class="qualification__title">Software Engineer</h3>
                                 <span class="qualification__subtitle3">StreamSets Inc.</span><br>
@@ -441,7 +441,7 @@
                                 <span class="qualification__rounder"></span>
                                 <span class="qualification__line"></span>
                             </div>
-                        </div>
+                        </div> -->
 
                         <!--==================== QUALIFICATION 2 ====================-->
                         <div class="qualification__data">
@@ -482,7 +482,7 @@
                             </div>
                         </div>
 
-<!--                         <!--==================== QUALIFICATION 4 ====================-->
+                        <!--==================== QUALIFICATION 4 ====================-->
                         <div class="qualification__data">
                             <div>
                                 <h3 class="qualification__title">Tech Trainer</h3>
@@ -499,7 +499,7 @@
                                 <span class="qualification__rounder"></span>
                                 <span class="qualification__line"></span>
                             </div>
-                        </div> -->
+                        </div>
                     </div>
                 </div>
             </div>
