Update Work Info

--- a/index.html
+++ b/index.html
@@ -425,7 +425,7 @@
                     <!--==================== QUALIFICATION CONTENT 2 ====================-->
                     <div class="qualification__content" data-content id="work">
                         <!--==================== QUALIFICATION 1 ====================-->
-<!--                         <div class="qualification__data">
+                        <div class="qualification__data">
                             <div>
                                 <h3 class="qualification__title">Software Engineer</h3>
                                 <span class="qualification__subtitle3">StreamSets Inc.</span><br>
@@ -441,10 +441,16 @@
                                 <span class="qualification__rounder"></span>
                                 <span class="qualification__line"></span>
                             </div>
-                        </div> -->
+                        </div>
 
                         <!--==================== QUALIFICATION 2 ====================-->
                         <div class="qualification__data">
+                            <div></div>
+                            <div>
+                                <span class="qualification__rounder"></span>
+                                <span class="qualification__line"></span>
+                            </div>
+                            
                             <div>
                                 <h3 class="qualification__title">Software Engineer</h3>
                                 <span class="qualification__subtitle3">Optum - UHG</span><br>
@@ -455,21 +461,10 @@
                                     2020 - 2022
                                 </div>
                             </div>
-
-                            <div>
-                                <span class="qualification__rounder"></span>
-                                <span class="qualification__line"></span>
-                            </div>
                         </div>
 
                         <!--==================== QUALIFICATION 3 ====================-->
                         <div class="qualification__data">
-                            <div></div>
-                            <div>
-                                <span class="qualification__rounder"></span>
-                                <span class="qualification__line"></span>
-                            </div>
-
                             <div>
                                 <h3 class="qualification__title">Research Intern</h3>
                                 <span class="qualification__subtitle3">Bhabha Atomic Research Centre</span>
@@ -479,6 +474,11 @@
                                     <i class="uil uil-calendar-alt"></i>
                                     2019 
                                 </div>
+                            </div>
+                                                          
+                            <div>
+                                <span class="qualification__rounder"></span>
+                                <span class="qualification__line"></span>
                             </div>
                         </div>
 
