Remove Older Internship Info

--- a/index.html
+++ b/index.html
@@ -483,7 +483,7 @@
                         </div>
 
                         <!--==================== QUALIFICATION 4 ====================-->
-                        <div class="qualification__data">
+<!--                         <div class="qualification__data">
                             <div>
                                 <h3 class="qualification__title">Tech Trainer</h3>
                                 <span class="qualification__subtitle3">SmileBots</span><br>
@@ -499,7 +499,7 @@
                                 <span class="qualification__rounder"></span>
                                 <span class="qualification__line"></span>
                             </div>
-                        </div>
+                        </div> -->
                     </div>
                 </div>
             </div>
