Update Work Info

--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
                     </p>
                     <div class="about__info">
                         <div>
-                            <span class="about__info-title">02+</span>
+                            <span class="about__info-title">03+</span>
                             <span class="about__info-name">Years <br> Experience</span>
                         </div>
                         <div>
@@ -154,7 +154,7 @@
                             <span class="about__info-name">Completed <br> Certifications</span>
                         </div>
                         <div>
-                            <span class="about__info-title">02+</span>
+                            <span class="about__info-title">03+</span>
                             <span class="about__info-name">Organizations <br> Exposure</span>
                         </div>
                     </div>
@@ -427,7 +427,7 @@
                         <!--==================== QUALIFICATION 1 ====================-->
                         <div class="qualification__data">
                             <div>
-                                <h3 class="qualification__title">Software Engineer</h3>
+                                <h3 class="qualification__title">Software Engineer II</h3>
                                 <span class="qualification__subtitle3">StreamSets Inc.</span><br>
                                 <span class="qualification__subtitle1">Data Collector Team</span><br>
                                 <span class="qualification__subtitle2">Core Product</span><br>
