--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@
                             <i class="uil uil-analytics skills__icon"></i>
                             <div>
                                 <h1 class="skills__title">Software Engineering</h1>
-                                <span class="skills__subtitle">More than 2 years</span>
+                                <span class="skills__subtitle">More than 3 years</span>
                             </div>
 
                             <i class="uil uil-angle-down skills__arrow"></i>
@@ -240,7 +240,7 @@
                             <i class="uil uil-brackets-curly skills__icon"></i>
                             <div>
                                 <h1 class="skills__title">Data Engineering</h1>
-                                <span class="skills__subtitle">More than 1 years</span>
+                                <span class="skills__subtitle">More than 2 years</span>
                             </div>
 
                             <i class="uil uil-angle-down skills__arrow"></i>
@@ -293,7 +293,7 @@
                             <i class="uil uil-money-bill skills__icon"></i>
                             <div>
                                 <h1 class="skills__title">Web Development</h1>
-                                <span class="skills__subtitle">Around 1 year</span>
+                                <span class="skills__subtitle">Around 2 years</span>
                             </div>
 
                             <i class="uil uil-angle-down skills__arrow"></i>
