--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
                     </p>
                     <div class="about__info">
                         <div>
-                            <span class="about__info-title">05+</span>
+                            <span class="about__info-title">06+</span>
                             <span class="about__info-name">Years <br> Experience</span>
                         </div>
                         <div>
@@ -161,8 +161,8 @@
                             <span class="about__info-name">Completed <br> Certifications</span>
                         </div>
                         <div>
-                            <span class="about__info-title">03+</span>
-                            <span class="about__info-name">Organizations <br> Exposure</span>
+                            <span class="about__info-title">10+</span>
+                            <span class="about__info-name">Corporate Trainings <br> Delivered</span>
                         </div>
                     </div>
 
@@ -188,7 +188,7 @@
                             <i class="uil uil-analytics skills__icon"></i>
                             <div>
                                 <h1 class="skills__title">Software Engineering</h1>
-                                <span class="skills__subtitle">More than 5 years</span>
+                                <span class="skills__subtitle">More than 6 years</span>
                             </div>
 
                             <i class="uil uil-angle-down skills__arrow"></i>
@@ -197,10 +197,19 @@
                             <div class="skills__data">
                                 <div class="skills__titles">
                                     <h3 class="skills__name">Problem Solving</h3>
-                                    <span class="skills__number">80%</span>
+                                    <span class="skills__number">90%</span>
                                 </div>
                                 <div class="skills__bar">
-                                    <span class="skills__percentage skills__80"></span>
+                                    <span class="skills__percentage skills__90"></span>
+                                </div>
+                            </div>
+                            <div class="skills__data">
+                                <div class="skills__titles">
+                                    <h3 class="skills__name">Python</h3>
+                                    <span class="skills__number">90%</span>
+                                </div>
+                                <div class="skills__bar">
+                                    <span class="skills__percentage skills__90"></span>
                                 </div>
                             </div>
                             <div class="skills__data">
@@ -210,15 +219,6 @@
                                 </div>
                                 <div class="skills__bar">
                                     <span class="skills__percentage skills__80"></span>
-                                </div>
-                            </div>
-                            <div class="skills__data">
-                                <div class="skills__titles">
-                                    <h3 class="skills__name">Python</h3>
-                                    <span class="skills__number">70%</span>
-                                </div>
-                                <div class="skills__bar">
-                                    <span class="skills__percentage skills__70"></span>
                                 </div>
                             </div>
                             <div class="skills__data">
@@ -233,10 +233,10 @@
                             <div class="skills__data">
                                 <div class="skills__titles">
                                     <h3 class="skills__name">Golang</h3>
-                                    <span class="skills__number">60%</span>
+                                    <span class="skills__number">70%</span>
                                 </div>
                                 <div class="skills__bar">
-                                    <span class="skills__percentage skills__60"></span>
+                                    <span class="skills__percentage skills__70"></span>
                                 </div>
                             </div>
                         </div>
@@ -247,12 +247,21 @@
                             <i class="uil uil-brackets-curly skills__icon"></i>
                             <div>
                                 <h1 class="skills__title">Data Engineering</h1>
-                                <span class="skills__subtitle">More than 3 years</span>
+                                <span class="skills__subtitle">More than 5 years</span>
                             </div>
 
                             <i class="uil uil-angle-down skills__arrow"></i>
                         </div>
                         <div class="skills__list grid">
+                            <div class="skills__data">
+                                <div class="skills__titles">
+                                    <h3 class="skills__name">Apache Airflow</h3>
+                                    <span class="skills__number">90%</span>
+                                </div>
+                                <div class="skills__bar">
+                                    <span class="skills__percentage skills__90"></span>
+                                </div>
+                            </div>
                             <div class="skills__data">
                                 <div class="skills__titles">
                                     <h3 class="skills__name">Big Data (Hadoop + Hive)</h3>
@@ -264,7 +273,7 @@
                             </div>
                             <div class="skills__data">
                                 <div class="skills__titles">
-                                    <h3 class="skills__name">Apache Airflow</h3>
+                                    <h3 class="skills__name">SQL</h3>
                                     <span class="skills__number">80%</span>
                                 </div>
                                 <div class="skills__bar">
@@ -273,7 +282,7 @@
                             </div>
                             <div class="skills__data">
                                 <div class="skills__titles">
-                                    <h3 class="skills__name">SQL</h3>
+                                    <h3 class="skills__name">Apache Spark</h3>
                                     <span class="skills__number">70%</span>
                                 </div>
                                 <div class="skills__bar">
@@ -282,20 +291,11 @@
                             </div>
                             <div class="skills__data">
                                 <div class="skills__titles">
-                                    <h3 class="skills__name">Apache Spark</h3>
-                                    <span class="skills__number">60%</span>
-                                </div>
-                                <div class="skills__bar">
-                                    <span class="skills__percentage skills__60"></span>
-                                </div>
-                            </div>
-                            <div class="skills__data">
-                                <div class="skills__titles">
                                     <h3 class="skills__name">Apache Kafka</h3>
-                                    <span class="skills__number">60%</span>
+                                    <span class="skills__number">70%</span>
                                 </div>
                                 <div class="skills__bar">
-                                    <span class="skills__percentage skills__60"></span>
+                                    <span class="skills__percentage skills__70"></span>
                                 </div>
                             </div>
                         </div>
@@ -309,7 +309,7 @@
                             <i class="uil uil-money-bill skills__icon"></i>
                             <div>
                                 <h1 class="skills__title">Web Development</h1>
-                                <span class="skills__subtitle">Around 3 years</span>
+                                <span class="skills__subtitle">Around 4 years</span>
                             </div>
 
                             <i class="uil uil-angle-down skills__arrow"></i>
@@ -318,6 +318,24 @@
                             <div class="skills__data">
                                 <div class="skills__titles">
                                     <h3 class="skills__name">Angular/TypeScript</h3>
+                                    <span class="skills__number">80%</span>
+                                </div>
+                                <div class="skills__bar">
+                                    <span class="skills__percentage skills__80"></span>
+                                </div>
+                            </div>
+                            <div class="skills__data">
+                                <div class="skills__titles">
+                                    <h3 class="skills__name">FastApi</h3>
+                                    <span class="skills__number">80%</span>
+                                </div>
+                                <div class="skills__bar">
+                                    <span class="skills__percentage skills__80"></span>
+                                </div>
+                            </div>
+                            <div class="skills__data">
+                                <div class="skills__titles">
+                                    <h3 class="skills__name">HTML/CSS</h3>
                                     <span class="skills__number">70%</span>
                                 </div>
                                 <div class="skills__bar">
@@ -326,29 +344,11 @@
                             </div>
                             <div class="skills__data">
                                 <div class="skills__titles">
-                                    <h3 class="skills__name">FastApi</h3>
-                                    <span class="skills__number">60%</span>
-                                </div>
-                                <div class="skills__bar">
-                                    <span class="skills__percentage skills__60"></span>
-                                </div>
-                            </div>
-                            <div class="skills__data">
-                                <div class="skills__titles">
-                                    <h3 class="skills__name">HTML/CSS</h3>
-                                    <span class="skills__number">60%</span>
-                                </div>
-                                <div class="skills__bar">
-                                    <span class="skills__percentage skills__60"></span>
-                                </div>
-                            </div>
-                            <div class="skills__data">
-                                <div class="skills__titles">
                                     <h3 class="skills__name">JavaScript</h3>
-                                    <span class="skills__number">60%</span>
+                                    <span class="skills__number">70%</span>
                                 </div>
                                 <div class="skills__bar">
-                                    <span class="skills__percentage skills__60"></span>
+                                    <span class="skills__percentage skills__70"></span>
                                 </div>
                             </div>
                         </div>
@@ -871,7 +871,7 @@
 
                         <div>
                             <h3 class="contact__title">Home</h3>
-                            <span class="contact__subtitle">Raipur, India</span>
+                            <span class="contact__subtitle">India</span>
                         </div>
                     </div>
                 </div>
