--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
                     </div>
 
                     <div class="about__buttons">
-                        <a download="" href="./packages/pdf/Neeraj Jain_Resume.pdf" class="button button--flex">
+                        <a download="" href="./packages/pdf/Neeraj Jain.pdf" class="button button--flex">
                             Download Resume<i class="uil uil-download-alt button__icon"></i>
                         </a>
                     </div>
